--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,9 +3,9 @@
   "compilerOptions": {
     "target": "ESNext",
     "module": "ESNext",
-    "lib": ["ESNext", "DOM"],
+    "lib": ["ESNext", "DOM", "DOM.Iterable"],
     "skipLibCheck": true,
-    "moduleResolution": "bundler"
+    "moduleResolution": "bundler",
   },
   "include": ["**/*.ts", "**/*.tsx"]
 }
