--- a/package.json
+++ b/package.json
@@ -4,11 +4,17 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "css": "pnpm --filter @madogiwa-ui/css"
+    "css": "pnpm --filter @madogiwa-ui/css",
+    "lint:js": "eslint --cache --cache-location node_modules/.cache/eslint/"
   },
   "devDependencies": {
+    "@eslint/js": "^9.33.0",
     "@tsconfig/strictest": "^2.0.5",
-    "typescript": "~5.9.2"
+    "eslint": "^9.33.0",
+    "eslint-plugin-unicorn": "60.0.0",
+    "globals": "^16.3.0",
+    "typescript": "~5.9.2",
+    "typescript-eslint": "^8.39.1"
   },
   "packageManager": "pnpm@10.14.0"
 }
