--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.33.0",
+    "@stylistic/eslint-plugin": "^5.2.3",
     "@tsconfig/strictest": "^2.0.5",
     "eslint": "^9.33.0",
     "eslint-plugin-unicorn": "60.0.0",
