--- a/package.json
+++ b/package.json
@@ -5,9 +5,10 @@
   "type": "module",
   "scripts": {
     "css": "pnpm --filter @madogiwa-ui/css",
-    "lint:js": "eslint --cache --cache-location node_modules/.cache/eslint/"
+    "lint": "eslint --cache --cache-location node_modules/.cache/eslint/"
   },
   "devDependencies": {
+    "@eslint/css": "^0.10.0",
     "@eslint/js": "^9.33.0",
     "@stylistic/eslint-plugin": "^5.2.3",
     "@tsconfig/strictest": "^2.0.5",
