feat: add ESLint extension to devcontainer configuration

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -11,7 +11,8 @@
         "editorconfig.editorconfig",
         "github.copilot",
         "github.copilot-chat",
-        "jacobcassidy.css-nesting-syntax-highlighting"
+        "jacobcassidy.css-nesting-syntax-highlighting",
+        "dbaeumer.vscode-eslint"
       ]
     }
   },
