--- a/packages/css/package.json
+++ b/packages/css/package.json
@@ -4,18 +4,22 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
+    "setup": "playwright install chromium --with-deps",
     "dev": "vite --host",
     "build": "tsc && vite build",
     "preview": "vite preview",
     "storybook": "storybook dev -p 6006",
-    "build-storybook": "storybook build"
+    "storybook:build": "storybook build",
+    "storybook:test": "test-storybook"
   },
   "devDependencies": {
+    "@playwright/test": "^1.55.0",
     "@storybook/addon-a11y": "^9.1.2",
     "@storybook/addon-docs": "^9.1.2",
     "@storybook/builder-vite": "^9.1.2",
     "@storybook/html": "^9.1.2",
     "@storybook/html-vite": "^9.1.2",
+    "@storybook/test-runner": "^0.23.0",
     "@unocss/reset": "^66.4.2",
     "storybook": "^9.1.2",
     "vite": "^7.1.2"
