feat: update package.json and pnpm-lock.yaml to manage Playwright dependencies

--- a/package.json
+++ b/package.json
@@ -4,12 +4,15 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
+    "setup": "playwright install chromium --with-deps",
     "css": "pnpm --filter @madogiwa-ui/css",
-    "lint": "eslint --cache --cache-location node_modules/.cache/eslint/"
+    "lint": "eslint --cache --cache-location node_modules/.cache/eslint/",
+    "lint:type-check": "tsc --noEmit"
   },
   "devDependencies": {
     "@eslint/css": "^0.10.0",
     "@eslint/js": "^9.33.0",
+    "@playwright/test": "^1.55.0",
     "@stylistic/eslint-plugin": "^5.2.3",
     "@tsconfig/strictest": "^2.0.5",
     "eslint": "^9.33.0",
