--- a/packages/css/package.json
+++ b/packages/css/package.json
@@ -9,7 +9,8 @@
     "preview": "vite preview",
     "storybook": "storybook dev -p 6006",
     "storybook:build": "storybook build",
-    "storybook:test": "test-storybook"
+    "storybook:test": "test-storybook",
+    "storybook:preview": "pnpm dlx http-server storybook-static"
   },
   "devDependencies": {
     "@storybook/addon-a11y": "^9.1.2",
