--- a/packages/css/package.json
+++ b/packages/css/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite --host",
-    "build": "tsc && vite build",
+    "build": "vite build",
     "preview": "vite preview",
     "storybook": "storybook dev -p 6006",
     "storybook:build": "storybook build",
@@ -20,7 +20,17 @@
     "@storybook/html-vite": "^9.1.3",
     "@storybook/test-runner": "^0.23.0",
     "@unocss/reset": "^66.4.2",
+    "postcss-preset-env": "^10.3.1",
     "storybook": "^9.1.3",
     "vite": "^7.1.3"
-  }
+  },
+  "browserslist": [
+    "last 3 Chrome versions",
+    "last 3 Firefox versions",
+    "last 3 Safari versions",
+    "last 3 Edge versions",
+    "last 3 and_chr versions",
+    "last 3 ios_saf versions",
+    "not dead"
+  ]
 }
