--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,6 +7,7 @@ on:
   pull_request:
     paths:
       - "**/*.js"
+      - "**/*.mjs"
       - "**/*.ts"
       - "**/*.css"
       - "package.json"
@@ -33,8 +34,10 @@ jobs:
       - run: pnpm install --frozen-lockfile
       - name: lint typecheck
         run: pnpm run lint:type-check
-      - name: lint
+      - name: lint js
         run: pnpm run lint
+      - name: lint css
+        run: pnpm run lint:css
 
   test:
     runs-on: ubuntu-latest
