--- a/package.json
+++ b/package.json
@@ -7,17 +7,21 @@
     "setup": "playwright install chromium --with-deps",
     "css": "pnpm --filter @madogiwa-ui/css",
     "lint": "eslint --cache --cache-location node_modules/.cache/eslint/",
+    "lint:css": "stylelint \"**/*.css\" --cache --cache-location node_modules/.cache/stylelint/ --ignore-path .gitignore",
     "lint:type-check": "tsc --noEmit"
   },
   "devDependencies": {
-    "@eslint/css": "^0.11.0",
     "@eslint/js": "^9.35.0",
     "@playwright/test": "^1.55.0",
     "@stylistic/eslint-plugin": "^5.3.1",
+    "@stylistic/stylelint-plugin": "^4.0.0",
     "@tsconfig/strictest": "^2.0.5",
     "eslint": "^9.35.0",
     "eslint-plugin-unicorn": "60.0.0",
     "globals": "^16.4.0",
+    "stylelint": "^16.24.0",
+    "stylelint-config-standard": "^39.0.0",
+    "stylelint-plugin-use-baseline": "^1.0.0",
     "typescript": "~5.9.2",
     "typescript-eslint": "^8.44.0"
   },
