feat: add additional VSCode extensions for enhanced development experience

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -13,7 +13,9 @@
         "github.copilot-chat",
         "jacobcassidy.css-nesting-syntax-highlighting",
         "dbaeumer.vscode-eslint",
-        "stylelint.vscode-stylelint"
+        "stylelint.vscode-stylelint",
+        "fabiospampinato.vscode-open-in-github",
+        "redhat.vscode-yaml"
       ]
     }
   },
