--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -66,5 +66,7 @@ jobs:
           npx concurrently -k -s first -n "SB,TEST" -c "magenta,blue" \
             "pnpm run css storybook:preview --port 6006 --silent" \
             "npx wait-on tcp:127.0.0.1:6006 && pnpm run css storybook:test"
+      - name: Unit tests for css
+        run: pnpm css test
       - name: Build for css
-        run: pnpm run css build
+        run: pnpm css build
