--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "build": "pnpm css build",
-    "build:docs": "pnpm css build:docs",
+    "build:docs": "pnpm css build:docs --output-dir=../../docs/storybook/css",
     "setup": "playwright install chromium --with-deps",
     "css": "pnpm --filter @madogiwa-ui/css",
     "lint": "eslint --cache --cache-location node_modules/.cache/eslint/",
