--- a/packages/css/package.json
+++ b/packages/css/package.json
@@ -15,7 +15,7 @@
   "scripts": {
     "dev": "vite --host",
     "build": "vite build",
-    "build:docs": "pnpm storybook:build --output-dir=../../docs/storybook/css",
+    "build:docs": "pnpm storybook:build",
     "preview": "vite preview",
     "storybook": "storybook dev -p 6006",
     "test": "node --experimental-strip-types --test **/*.test.ts",
