--- a/packages/css/package.json
+++ b/packages/css/package.json
@@ -47,6 +47,9 @@
     "README.md"
   ],
   "sideEffects": false,
+  "dependencies": {
+    "@unocss/reset": "^66.5.4"
+  },
   "devDependencies": {
     "@storybook/addon-a11y": "^9.1.13",
     "@storybook/addon-docs": "^9.1.13",
@@ -54,7 +57,6 @@
     "@storybook/html": "^9.1.13",
     "@storybook/html-vite": "^9.1.13",
     "@storybook/test-runner": "^0.23.0",
-    "@unocss/reset": "^66.5.4",
     "postcss-preset-env": "^10.4.0",
     "storybook": "^9.1.13",
     "vite": "^7.1.11"
