feat: initial Vue wrapper setup with modern tooling and test infra
This commit introduces the initial setup for the @madogiwa-ui/vue package, providing a Vue 3 wrapper for the madogiwa-ui/css framework.

- Added peer dependencies for Vue 3 and `@madogiwa-ui/css` to ensure compatibility and allow consumer-side version control.
- Auto-generated type definitions via `vite-plugin-dts` for robust type safety.
- Configured ESLint (flat config) and Stylelint with Vue-specific rules.
- Implemented Vitest browser mode and Vue Test Utils for component-level testing in real browser environments.
- Provided a sample MButton component with full BEM class structure, CSS variable usage, and accessibility considerations.
- Ensured monorepo compatibility with pnpm workspaces and catalog dependencies for unified development experience.

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -15,7 +15,8 @@
         "dbaeumer.vscode-eslint",
         "stylelint.vscode-stylelint",
         "fabiospampinato.vscode-open-in-github",
-        "redhat.vscode-yaml"
+        "redhat.vscode-yaml",
+        "Vue.volar"
       ]
     }
   },
