--- a/packages/vue/package.json
+++ b/packages/vue/package.json
@@ -1,13 +1,14 @@
 {
-  "name": "@madogiwa-ui/css",
+  "name": "@madogiwa-ui/vue",
   "version": "0.0.0",
   "type": "module",
-  "main": "./dist/madogiwa-ui.min.css",
-  "style": "./dist/madogiwa-ui.min.css",
+  "main": "./dist/madogiwa-ui-vue.min.js",
+  "types": "./dist/types/index.d.ts",
   "exports": {
     ".": {
-      "style": "./dist/madogiwa-ui.min.css",
-      "default": "./dist/madogiwa-ui.min.css"
+      "types": "./dist/types/index.d.ts",
+      "import": "./dist/madogiwa-ui-vue.min.js",
+      "default": "./dist/madogiwa-ui-vue.min.js"
     },
     "./dist/*": "./dist/*",
     "./src/*": "./src/*"
@@ -15,27 +16,25 @@
   "scripts": {
     "dev": "vite --host",
     "build": "vite build",
-    "build:docs": "pnpm storybook:build",
     "preview": "vite preview",
-    "storybook": "storybook dev -p 6006",
-    "test": "node --experimental-strip-types --test **/*.test.ts",
-    "storybook:build": "storybook build",
-    "storybook:test": "test-storybook",
-    "storybook:preview": "pnpm dlx http-server storybook-static"
+    "test": "vitest",
+    "type-check": "vue-tsc --noEmit",
+    "test:browser": "vitest --config=vitest.browser.config.ts"
   },
   "description": "A flexible, accessible, next-generation UI framework leveraging cutting-edge CSS features",
   "keywords": [
     "css",
     "css-framework",
     "ui-library",
-    "modern-css"
+    "modern-css",
+    "vue"
   ],
   "author": "madogiwa0124",
   "license": "MIT",
   "repository": {
     "type": "git",
     "url": "https://github.com/madogiwa0124/madogiwa-ui.git",
-    "directory": "packages/css"
+    "directory": "packages/vue"
   },
   "homepage": "https://github.com/madogiwa0124/madogiwa-ui#readme",
   "bugs": {
@@ -43,23 +42,25 @@
   },
   "files": [
     "dist/**/*",
-    "src/**/*.css",
     "README.md"
   ],
   "sideEffects": false,
-  "dependencies": {
-    "@unocss/reset": "^66.5.4"
+  "peerDependencies": {
+    "@madogiwa-ui/css": "workspace:*",
+    "vue": "^3.0.0"
   },
   "devDependencies": {
-    "@storybook/addon-a11y": "^9.1.13",
-    "@storybook/addon-docs": "^9.1.13",
-    "@storybook/builder-vite": "^9.1.13",
-    "@storybook/html": "^9.1.13",
-    "@storybook/html-vite": "^9.1.13",
-    "@storybook/test-runner": "^0.23.0",
+    "@vitejs/plugin-vue": "^6.0.1",
+    "@vitest/browser-playwright": "^4.0.3",
+    "@vue/test-utils": "^2.4.6",
+    "@vue/tsconfig": "^0.8.1",
     "postcss-preset-env": "catalog:",
-    "storybook": "^9.1.13",
-    "vite": "catalog:"
+    "typescript": "catalog:",
+    "vite": "catalog:",
+    "vite-plugin-dts": "^4.5.4",
+    "vitest": "^4.0.3",
+    "vitest-browser-vue": "^2.0.0",
+    "vue-tsc": "^3.1.2"
   },
   "browserslist": [
     "baseline newly available"
