fixed: use pnpm dlx for faild ci
```
[TEST] sh: 1: wait-on: not found
[TEST] npx wait-on tcp:127.0.0.1:6006 && pnpm run css storybook:test exited with code 127
--> Sending SIGTERM to other processes..
```

ref: https://github.com/madogiwa0124/madogiwa-ui/actions/runs/18818659975/job/53690709695

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -63,9 +63,9 @@ jobs:
         run: pnpm run css storybook:build
       - name: Serve Storybook and run tests for css
         run: |
-          npx concurrently -k -s first -n "SB,TEST" -c "magenta,blue" \
+          pnpm dlx concurrently -k -s first -n "SB,TEST" -c "magenta,blue" \
             "pnpm run css storybook:preview --port 6006 --silent" \
-            "npx wait-on tcp:127.0.0.1:6006 && pnpm run css storybook:test"
+            "pnpm dlx wait-on tcp:127.0.0.1:6006 && pnpm run css storybook:test"
       - name: Unit tests for css
         run: pnpm css test
       - name: Build for css
