chore(ci): use .node-version file for actions/setup-node

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,7 +29,7 @@ jobs:
         uses: pnpm/action-setup@a7487c7e89a18df4991f7f222e4898a00d66ddda # v4.1.0
       - uses: actions/setup-node@49933ea5288caeca8642d1e84afbd3f7d6820020 # v4.4.0
         with:
-          node-version: "22"
+          node-version-file: .node-version
           cache: "pnpm"
       - run: pnpm install --frozen-lockfile
       - name: lint typecheck
@@ -48,7 +48,7 @@ jobs:
         uses: pnpm/action-setup@a7487c7e89a18df4991f7f222e4898a00d66ddda # v4.1.0
       - uses: actions/setup-node@49933ea5288caeca8642d1e84afbd3f7d6820020 # v4.4.0
         with:
-          node-version: "22"
+          node-version-file: .node-version
           cache: "pnpm"
       - run: pnpm install --frozen-lockfile
       - name: Cache Playwright Browsers
@@ -80,7 +80,7 @@ jobs:
         uses: pnpm/action-setup@a7487c7e89a18df4991f7f222e4898a00d66ddda # v4.1.0
       - uses: actions/setup-node@49933ea5288caeca8642d1e84afbd3f7d6820020 # v4.4.0
         with:
-          node-version: "22"
+          node-version-file: .node-version
           cache: "pnpm"
       - run: pnpm install --frozen-lockfile
       - name: Cache Playwright Browsers
