--- a/packages/vue/package.json
+++ b/packages/vue/package.json
@@ -17,7 +17,8 @@
     "dev": "vite --host",
     "build": "vite build",
     "preview": "vite preview",
-    "test": "vitest",
+    "test": "vitest run",
+    "test:watch": "vitest --watch",
     "type-check": "vue-tsc --noEmit",
     "test:browser": "vitest --config=vitest.browser.config.ts"
   },
