--- a/packages/vue/package.json
+++ b/packages/vue/package.json
@@ -53,14 +53,15 @@
     "vue": "^3.0.0"
   },
   "devDependencies": {
+    "@microsoft/api-extractor": "^7.48.0",
     "@vitejs/plugin-vue": "^6.0.1",
     "@vitest/browser-playwright": "^4.0.3",
     "@vue/test-utils": "^2.4.6",
     "@vue/tsconfig": "^0.8.1",
     "postcss-preset-env": "catalog:",
     "typescript": "catalog:",
+    "unplugin-dts": "^1.0.0-beta.6",
     "vite": "catalog:",
-    "vite-plugin-dts": "^4.5.4",
     "vitest": "^4.0.3",
     "vitest-browser-vue": "^2.0.0",
     "vue-tsc": "^3.1.2"
