--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "build": "pnpm css build && pnpm vue build",
-    "build:docs": "pnpm css build:docs --output-dir=../../docs/storybook/css; pnpm vue build:demo; mkdir -p ./docs/demo/vue && mv ./packages/vue/dist/demo ./docs/demo/vue",
+    "build:docs": "pnpm css build:docs --output-dir=../../docs/storybook/css; pnpm vue build:demo; mkdir -p ./docs/demo/vue && rsync -a --delete ./packages/vue/dist/demo/ ./docs/demo/vue/",
     "setup": "playwright install chromium --with-deps",
     "css": "pnpm --filter @madogiwa-ui/css",
     "vue": "pnpm --filter @madogiwa-ui/vue",
